# data-streaming-with-async-rust

manning-lp-async-rust-project-1-m1/: Cargo.toml
manning-lp-async-rust-project-1-m1/src/: main.rs
