[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11", features = [
    "attributes",
    "unstable",
    "tokio1",
] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1.8", features = ["derive"] }
futures = "0.3.23"
log = "0.4.17"
simple_logger = "2.3.0"
yahoo_finance_api = { version = "1.1" }
